--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-url: https://www.2000class.org
+url: https://2000class.unifiedtechnicalsolutions.co.uk
 baseurl: ""
 title: 2000 Class Association
 subtitle: Probably the best entry-level family performance asymmetric sailing dinghy in the world!
